Optimised parsing of Junos syslog messages.

--- a/logstash/junos.conf
+++ b/logstash/junos.conf
@@ -2,17 +2,44 @@ input {
     # JUNIPER LOGS
     syslog {
       port => 514
-      codec => plain 
+      codec => plain {
+        charset => "ASCII"
+      }
       type => "traffic"
     }
 }
 filter {
-  if "traffic" in [type] {
+    if "PFE_FW_SYSLOG_IP" in [message] {
+      grok {
+        match => [ "message", "%{PFE_SYSIP}" ]
+        remove_field => [ "message" ]
+        add_tag => [ "junos-pfe" ]
+        remove_tag => [ "_grokparsefailure" ]
+      }
+      # TIMESTAMP REPLACE
+      date {
+        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
+        remove_field => [ "timestamp" ]
+      }
+    }
+    if "L2ALM" in [message] {
+      grok {
+        match => [ "message", "%{JUNOS_SIMPLE2}" ]
+        overwrite => [ "message" ]
+        add_tag => [ "junos-system" ]
+      }
+      # TIMESTAMP REPLACE
+      date {
+        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
+        remove_field => [ "timestamp" ]
+      }
+    }
     # JUNOS FLOW
     if "FLOW_REASSEMBLE" in [message]  {
       grok {
-        match => [ "message", "%{JUNOS_SIMPLE}" ]
+        match => [ "message", "%{JUNOS_SIMPLE3}" ]
         overwrite => [ "message" ]
+	add_tag => [ "junos-unknown" ]
       }
       # TIMESTAMP REPLACE
       date {
@@ -154,21 +181,10 @@ filter {
       }
     }
     ## JUNOS CFG AUDIT
-    if "UI_CFG" in [message] or "UI_LOAD_EVENT" in [message] or "UI_DBASE" in [message] {
+    if "UI_" in [message] {
       grok {
         match => [ "message", "%{UI_CFG1}" ]
-        overwrite => [ "message" ]
-        add_tag => [ "junos-ui" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
-    }
-    if "UI_LOAD_JUNOS_DEFAULT_FILE_EVENT" in [message] or "UI_COMMIT" in [message] {
-      grok {
-        match => [ "message", "%{UI_CFG2}" ]
+        match => [ "message", "%{JUNOS_SIMPLE3}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-ui" ]
       }
@@ -179,19 +195,6 @@ filter {
       }
     }
     # END JUNOS CONFIG AUDIT
-
-    if "PFE_FW_SYSLOG_IP" in [message] {
-      grok {
-        match => [ "message", "%{PFE_SYSIP}" ]
-        remove_field => [ "message" ]
-        add_tag => [ "junos-ids" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
-    }
 
     if "nh_walk_chek_max_num_tag" in [message] {
       grok {
@@ -209,6 +212,8 @@ filter {
     if ![tags] {
       grok {
         match => [ "message", "%{JUNOS_SIMPLE}" ]
+        match => [ "message", "%{JUNOS_SIMPLE3}" ]
+        match => [ "message", "%{JUNOS_SIMPLE4}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-default" ]
       }
@@ -218,10 +223,16 @@ filter {
         remove_field => [ "timestamp" ]
       }
     }
-  } # END OF TRAFFIC TYPE
+
 }
 
 output {
+  # parse failure
+  if "_grokparsefailure" in [tags] {
+    file {
+      path => "/opt/logstash/grokparsefailure.log"
+    }
+  }
   if "traffic" in [type] {
     elasticsearch {
       host => "es-1"
