Optimised parsing of Junos.

--- a/logstash/junos.conf
+++ b/logstash/junos.conf
@@ -2,9 +2,7 @@ input {
     # JUNIPER LOGS
     syslog {
       port => 514
-      codec => plain {
-        charset => "ASCII"
-      }
+      codec => plain
       type => "traffic"
     }
 }
