[JunOS 11.4] updated filter section

--- a/logstash/junos.conf
+++ b/logstash/junos.conf
@@ -3,10 +3,13 @@ input {
     syslog {
       port => 514
       codec => plain
-      type => "traffic"
+      type => "junos"
     }
 }
+
 filter {
+  ## JUNIPER
+  if "junos" in [type] {
     if "PFE_FW_SYSLOG_IP" in [message] {
       grok {
         match => [ "message", "%{PFE_SYSIP}" ]
@@ -221,7 +224,7 @@ filter {
         remove_field => [ "timestamp" ]
       }
     }
-
+  } # END OF JUNOS
 }
 
 output {
