[JunOS 11.4] timestamp code optimize.

--- a/logstash/junos.conf
+++ b/logstash/junos.conf
@@ -17,22 +17,12 @@ filter {
         add_tag => [ "junos-pfe" ]
         remove_tag => [ "_grokparsefailure" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
     }
     if "L2ALM" in [message] {
       grok {
         match => [ "message", "%{JUNOS_SIMPLE2}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-system" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
       }
     }
     # JUNOS FLOW
@@ -41,11 +31,6 @@ filter {
         match => [ "message", "%{JUNOS_SIMPLE3}" ]
         overwrite => [ "message" ]
 	add_tag => [ "junos-unknown" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
       }
     }
     if "RT_FLOW_SESSION" in [message] {
@@ -87,11 +72,6 @@ filter {
           source => [ "src_ip", "dst_ip", "dst_port", "service" ]
         }
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      } 
     }
 
     # JUNOS CPU
@@ -100,11 +80,6 @@ filter {
         match => [ "message", "%{RTPERF_EVENT}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-system" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
       }
     }
  
@@ -115,22 +90,12 @@ filter {
         overwrite => [ "message" ]
         add_tag => [ "junos-vpn" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
     }
     if "KMD_PM_SA_ESTABLISHED" in [message] {
       grok {
         match => [ "message", "%{KMD_SA}" ]
         remove_field => [ "message" ]
         add_tag => [ "junos-vpn" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
       }
     }
     if "IKE Phase-" in [message] {
@@ -144,11 +109,6 @@ filter {
         overwrite => [ "message" ]
         add_tag => [ "junos-vpn" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
     }
 
     # JUNOS DYNAMIC VPN
@@ -161,11 +121,6 @@ filter {
         overwrite => [ "message" ]
         add_tag => [ "junos-vpn" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
     }
 
     ## JUNOS IPSEC
@@ -174,11 +129,6 @@ filter {
         match => [ "message", "%{IPSEC_REPLAY}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-vpn" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]	
       }
     }
     ## JUNOS CFG AUDIT
@@ -189,11 +139,6 @@ filter {
         overwrite => [ "message" ]
         add_tag => [ "junos-ui" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
     }
     # END JUNOS CONFIG AUDIT
 
@@ -202,10 +147,6 @@ filter {
         match => [ "message", "%{JUN_GENERIC2}" ]
         overwrite => [ "message" ]
         add_tag => [ "junos-unknown" ]
-      }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
       }
     }
 
@@ -218,11 +159,12 @@ filter {
         overwrite => [ "message" ]
         add_tag => [ "junos-default" ]
       }
-      # TIMESTAMP REPLACE
-      date {
-        match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-      }
+    }
+
+    # GLOBAL TIMESTAMP REPLACE
+    date {
+      match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
+      remove_field => [ "timestamp" ]
     }
   } # END OF JUNOS
 }
