JunOS filter config file.

--- a/logstash/conf.d/junos.conf
+++ b/logstash/conf.d/junos.conf
@@ -1,12 +1,10 @@
 input {
-    # JUNIPER LOGS
-    syslog {
-      port => 514
-      codec => plain
-      type => "junos"
-    }
+  syslog {
+    port  => 514
+    codec => plain
+    type  => "junos"
+  }
 }
-
 filter {
   ## JUNIPER
   if "junos" in [type] {
@@ -46,7 +44,6 @@ filter {
         geoip {
           source => "src_ip"
           target => "srcgeoip"
-          database => "/opt/logstash/vendor/geoip/GeoLiteCity.dat"
           add_field => [ "[srcgeoip][coordinates]", "%{[srcgeoip][longitude]}" ]
           add_field => [ "[srcgeoip][coordinates]", "%{[srcgeoip][latitude]}"  ]
         }
@@ -58,7 +55,6 @@ filter {
         geoip {
           source => "dst_ip"
           target => "dstgeoip"
-          database => "/opt/logstash/vendor/geoip/GeoLiteCity.dat"
           add_field => [ "[dstgeoip][coordinates]", "%{[dstgeoip][longitude]}" ]
           add_field => [ "[dstgeoip][coordinates]", "%{[dstgeoip][latitude]}"  ]
         }
@@ -111,18 +107,6 @@ filter {
       }
     }
 
-    # JUNOS DYNAMIC VPN
-    if "DYNAMIC_VPN" in [message] {
-      grok {
-        match => [ "message", "%{JUN_DVPNDEL}" ]
-        match => [ "message", "%{JUN_DVPNSA}" ]
-        match => [ "message", "%{JUN_DVPNLIC}" ]
-        match => [ "message", "%{JUN_DVPNAOK}" ]
-        overwrite => [ "message" ]
-        add_tag => [ "junos-vpn" ]
-      }
-    }
-
     ## JUNOS IPSEC
     if "RT_IPSEC" in [message] {
       grok {
@@ -161,28 +145,17 @@ filter {
       }
     }
 
-    # GLOBAL TIMESTAMP REPLACE
+    ### GLOBAL TIMESTAMP REPLACE
     date {
       match => [ "timestamp", "MMM  dd HH:mm:ss", "MMM dd HH:mm:ss" ]
       remove_field => [ "timestamp" ]
     }
   } # END OF JUNOS
 }
-
 output {
-  # parse failure
-  if "_grokparsefailure" in [tags] {
-    file {
-      path => "/opt/logstash/grokparsefailure.log"
-    }
-  }
-  if "traffic" in [type] {
-    elasticsearch {
-      host => "es-1"
-      cluster => "elasticsearch"
-      protocol => "http"
-      index => "firewall-%{+YYYY.MM.dd}"
-      template_name => "firewall"
-    }
+  elasticsearch {
+    hosts => "elasticsearch-node"
+    index => "haproxy-%{+YYYY.MM.dd}"
+    template_name => "haproxy"
   }
 }
