Fortinet FortiOS filter parser.

--- a/logstash/conf.d/junos.conf
+++ b/logstash/conf.d/junos.conf
@@ -155,7 +155,7 @@ filter {
 output {
   elasticsearch {
     hosts => "elasticsearch-node"
-    index => "haproxy-%{+YYYY.MM.dd}"
-    template_name => "haproxy"
+    index => "firewalls-%{+YYYY.MM.dd}"
+    template_name => "firewalls"
   }
 }
